# halogen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  iwyu.imp
.githooks/: pre-commit
cmake/: IWYU.cmake
libraries/: CMakeLists.txt
